--- a/.gitmodules
+++ b/.gitmodules
@@ -34,6 +34,9 @@
 [submodule "bundle/vim-airline-themes"]
 	path = bundle/vim-airline-themes
 	url = https://github.com/vim-airline/vim-airline-themes.git
-[submodule "bundle/youcompleteme"]
-	path = bundle/youcompleteme
-	url = https://github.com/valloric/youcompleteme
+[submodule "bundle/jedi-vim"]
+	path = bundle/jedi-vim
+	url = https://github.com/davidhalter/jedi-vim.git
+[submodule "bundle/vim-emacscommandline"]
+	path = bundle/vim-emacscommandline
+	url = https://github.com/houtsnip/vim-emacscommandline.git
